--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -7,7 +8,8 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "build": "vite build"
     },
     "devDependencies": {
         "axios": "^0.21",
@@ -24,5 +26,15 @@
     },
     "resolutions": {
         "laravel-mix/webpack/terser-webpack-plugin/cacache/ssri": "^6.0.2"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.1.5",
+        "@vitejs/plugin-react": "^4.3.1",
+        "laravel-vite-plugin": "^1.0.5",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
+        "react-spinners": "^0.14.1",
+        "vite": "^5.4.2"
     }
 }
